# metachronism

./: .gitignore  Cargo.toml  README.md  penisout.com
bios/: build.sh
bios/2.2/: bios.z80  biostail.z80  cpm.z80  ldrtail.z80  loader.z80
bios/common/: alloc.z80  cat.z80  con.inc  config.inc  conio.inc  conio.lib  conio.z80  disk.inc  disk.lib  diskreg.inc  dwait.z80  endtest.z80  geom.z80  getchar.z80  ioregs.inc  mount.z80  putchar.z80  rdwrsec.z80  stddef.inc  strdsk.z80  util.z80
bios/profiles/: 2.2
src/: debug.rs  disk.rs  main.rs  mmu.rs  stdio_dev.rs
